--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,21 +6,19 @@
           🎓 Divulgação de Cursos 🎓
         </h1>
         <p class="lead mb-10">
-          Pagina para divulgação de cursos presenciais ou on-line confira uma lista abaixo.
+          Pagina para divulgação de cursos presenciais ou on-line.
         </p>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-3" *ngFor="let course of courses">
         <app-list-courses [course]="course"></app-list-courses>
       </div>
     </div>
 
-    <div class="row mt-5">
-      <div class="col-md-12">
-        <app-register-course (addCourse)="handleAddCourse($event)"></app-register-course>
-      </div>
+    <div class="row mt-3">
+      <app-register-course (addCourse)="handleAddCourse($event)"></app-register-course>
     </div>
   </div>
 </section>
